@@ -15,6 +15,7 @@ import gc
 import re
 import sys
 import math
+import ephem
 import numpy
 import pyfits
 from datetime import datetime
@@ -27,7 +28,7 @@ from lsl.correlator import uvUtils
 from lsl.misc import mathutil
 from lsl.misc import geodesy
 
-__version__ = '0.6'
+__version__ = '0.7'
 __revision__ = '$Rev$'
 __all__ = ['IDI', 'AIPS', 'ExtendedIDI', 'StokesCodes', 'NumericStokes', '__version__', '__revision__', '__all__']
 
@@ -103,11 +104,12 @@ class IDI(object):
 		Represents one UV visibility data set for a given observation time.
 		"""
     
-		def __init__(self, obsTime, intTime, dataDict, pol=StokesCodes['XX']):
+		def __init__(self, obsTime, intTime, dataDict, pol=StokesCodes['XX'], source='z'):
 			self.obsTime = obsTime
 			self.intTime = intTime
 			self.dataDict = dataDict
 			self.pol = pol
+			self.source = source
 			
 		def time(self):
 			return self.obsTime
@@ -273,10 +275,15 @@ class IDI(object):
 		self.nAnt = len(ants)
 		self.array.append( {'center': [arrayX, arrayY, arrayZ], 'ants': ants, 'mapper': mapper, 'enableMapper': enableMapper, 'inputAnts': antennas} )
 		
-	def addDataSet(self, obsTime, intTime, baselines, visibilities, pol='XX'):
+	def addDataSet(self, obsTime, intTime, baselines, visibilities, pol='XX', source='z'):
 		"""
 		Create a UVData object to store a collection of visibilities.
 		
+		.. versionchanged:: 1.1.0
+			Added a new 'source' keyword to set the phase center for the data.
+			This can either by 'z' for zenith or a ephem.Body instances for a
+			point on the sky.
+			
 		.. versionchanged:: 0.4.0
 			Switched over to passing in Antenna instances generated by the
 			:mod:`lsl.common.stations` module instead of a list of stand ID
@@ -293,7 +300,7 @@ class IDI(object):
 			baseline = mergeBaseline(ant1.stand.id, ant2.stand.id, shift=16)
 			dataDict[baseline] = visibilities[bl,:].squeeze()
 			
-		self.data.append( self._UVData(obsTime, intTime, dataDict, pol=numericPol) )
+		self.data.append( self._UVData(obsTime, intTime, dataDict, pol=numericPol, source=source) )
 		
 	def write(self):
 		"""
@@ -663,16 +670,21 @@ class IDI(object):
 		Define the Source table (group 1, table 2).
 		"""
 		
-		hrz = astro.hrz_posn(0, 90)
 		(arrPos, ag) = self.readArrayGeometry()
 		ids = ag.keys()
+		
+		obs = ephem.Observer()
+		obs.lat = arrPos.lat * numpy.pi/180
+		obs.lon = arrLog.lng * numpy.pi/180
+		obs.elev = arrLog.elv * numpy.pi/180
 		
 		nameList = []
 		raList = []
 		decList = []
 		raPoList = []
 		decPoList = []
-		sourceID = 1
+		sourceID = 0
+		lastSource = None
 		for dataSet in self.data:
 			if dataSet.pol == self.stokes[0]:
 				utc = astro.taimjd_to_utcjd(dataSet.obsTime)
@@ -681,24 +693,46 @@ class IDI(object):
 				date.minutes = 0
 				date.seconds = 0
 				utc0 = date.to_jd()
-				equ = hrz.to_equ(arrPos, utc)
 				
-				# current apparent zenith equatorial coordinates
-				raList.append(equ.ra)
-				decList.append(equ.dec)
+				obs.date = utc - astro.DJD_OFFSET
 				
-				# J2000 zenith equatorial coordinates
-				equPo = astro.get_equ_prec2(equ, utc, astro.J2000_UTC_JD)
-				raPoList.append(equPo.ra)
-				decPoList.append(equPo.dec)
-				
-				# format 'source' name based on local sidereal time
-				raHms = astro.deg_to_hms(equ.ra)
-				(tsecs, secs) = math.modf(raHms.seconds)
-				name = "ZA%02d%02d%02d%01d" % (raHms.hours, raHms.minutes, int(secs), int(tsecs * 10.0))
-				nameList.append(name)
-				sourceID += 1
+				if dataSet.source != lastSource:
+					sourceID += 1
+					
+					if dataSet.source == 'z':
+						## Zenith pointings
+						equ = astro.equ_posn( obs.sidereal_time()*180/numpy.pi, obs.lat*180/numpy.pi )
+						
+						# format 'source' name based on local sidereal time
+						raHms = astro.deg_to_hms(equ.ra)
+						(tsecs, secs) = math.modf(raHms.seconds)
+						
+						name = "ZA%02d%02d%02d%01d" % (raHms.hours, raHms.minutes, int(secs), int(tsecs * 10.0))
+						equPo = astro.get_equ_prec2(equ, utc, astro.J2000_UTC_JD)
+						
+					else:
+						## Real-live sources (ephem.Body instances)
+						lastSource = dataSet.source
+						
+						name = dataSet.source.name
+						equ = astro.equ_posn(dataSet.source.ra*180/numpy.pi, dataSet.source.dec*180/numpy.pi)
+						equPo = astro.equ_posn(dataSet.source.a_ra*180/numpy.pi, dataSet.source.a_dec*180/numpy.pi)
+						
+					# current apparent zenith equatorial coordinates
+					raList.append(equ.ra)
+					decList.append(equ.dec)
+					
+					# J2000 zenith equatorial coordinates
+					raPoList.append(equPo.ra)
+					decPoList.append(equPo.dec)
+					
+					# name
+					nameList.append(name)
+					
 		nSource = len(nameList)
+		
+		# Save these for later since we might need them
+		self._sourceTable = nameList
 		
 		# Source ID number
 		c1 = pyfits.Column(name='SOURCE_ID', format='1J', 
@@ -790,10 +824,14 @@ class IDI(object):
 		Define the UV_Data table (group 3, table 1).
 		"""
 		
-		hrz = astro.hrz_posn(0, 90)
 		(arrPos, ag) = self.readArrayGeometry()
 		(mapper, inverseMapper) = self.readArrayMapper()
 		ids = ag.keys()
+		
+		obs = ephem.Observer()
+		obs.lat = arrPos.lat * numpy.pi/180
+		obs.lon = arrLog.lng * numpy.pi/180
+		obs.elev = arrLog.elv * numpy.pi/180
 		
 		# Retrieve the original list of Antenna objects and convert them to
 		# a dictionary index by the stand ID number
@@ -812,7 +850,6 @@ class IDI(object):
 		rawList = []
 		nameList = []
 		sourceList = []
-		sourceID = 1
 		for dataSet in self.data:
 			if dataSet.pol == self.stokes[0]:
 				utc = astro.taimjd_to_utcjd(dataSet.obsTime)
@@ -821,14 +858,22 @@ class IDI(object):
 				date.minutes = 0
 				date.seconds = 0
 				utc0 = date.to_jd()
-				equ = hrz.to_equ(arrPos, utc)
 				
-				# format 'source' name based on local sidereal time
-				raHms = astro.deg_to_hms(equ.ra)
-				(tsecs, secs) = math.modf(raHms.seconds)
-				name = "ZA%02d%02d%02d%01d" % (raHms.hours, raHms.minutes, int(secs), 
-					int(tsecs * 10.0))
-				nameList.append(name)
+				obs.date = utc - astro.DJD_OFFSET
+				
+				if dataSet.source == 'z':
+					## Zenith pointings
+					equ = astro.equ_posn( obs.sidereal_time()*180/numpy.pi, obs.lat*180/numpy.pi )
+					
+					# format 'source' name based on local sidereal time
+					raHms = astro.deg_to_hms(equ.ra)
+					(tsecs, secs) = math.modf(raHms.seconds)
+					name = "ZA%02d%02d%02d%01d" % (raHms.hours, raHms.minutes, int(secs), int(tsecs * 10.0))
+				else:
+					## Real-live sources (ephem.Body instances)
+					name = dataSet.source.name
+					
+				sourceID = self._sourceTable.index(name) + 1
 				
 				# Compute the uvw coordinates of all baselines
 				if inverseMapper is not None:
@@ -843,7 +888,13 @@ class IDI(object):
 					antennaStands.append( inputAnts[standID] )
 				
 				uvwBaselines = numpy.array([mergeBaseline(a1.stand.id, a2.stand.id, shift=16) for a1,a2 in uvUtils.getBaselines(antennaStands)])
-				uvwCoords = uvUtils.computeUVW(antennaStands, HA=0.0, dec=equ.dec, freq=self.refVal)
+				if dataSet.source == 'z':
+					uvwCoords = uvUtils.computeUVW(antennaStands, HA=0.0, dec=equ.dec, site=obs, freq=self.refVal)
+				else:
+					HA = obs.sidereal_time() - dataSet.source.ra
+					dec = dataSet.source.dec * 180/numpy.pi
+					
+					uvwCoords = uvUtils.computeUVW(antennaStands, HA=HA, dec=dec, site=obs, freq=self.refVal)
 				uvwCoords *= 1.0 / self.refVal
 				
 				tempMList = {}
@@ -913,6 +964,7 @@ class IDI(object):
 					timeList.append(utc - utc0) 
 					intTimeList.append(dataSet.intTime)
 					sourceList.append(sourceID)
+					nameList.append(name)
 					
 			if dataSet.pol == self.stokes[-1]:
 				for bl in rawList:
@@ -928,7 +980,6 @@ class IDI(object):
 							
 					mList.append(matrix.ravel())
 					
-				sourceID += 1
 				rawList = []
 		nBaseline = len(blineList)
 		nSource = len(nameList)
@@ -1343,10 +1394,14 @@ class ExtendedIDI(IDI):
 		Define the UV_Data table (group 3, table 1).
 		"""
 		
-		hrz = astro.hrz_posn(0, 90)
 		(arrPos, ag) = self.readArrayGeometry()
 		(mapper, inverseMapper) = self.readArrayMapper()
 		ids = ag.keys()
+		
+		obs = ephem.Observer()
+		obs.lat = arrPos.lat * numpy.pi/180
+		obs.lon = arrLog.lng * numpy.pi/180
+		obs.elev = arrLog.elv * numpy.pi/180
 		
 		# Retrieve the original list of Antenna objects and convert them to
 		# a dictionary index by the stand ID number
@@ -1365,7 +1420,6 @@ class ExtendedIDI(IDI):
 		rawList = []
 		nameList = []
 		sourceList = []
-		sourceID = 1
 		for dataSet in self.data:
 			if dataSet.pol == self.stokes[0]:
 				utc = astro.taimjd_to_utcjd(dataSet.obsTime)
@@ -1374,14 +1428,22 @@ class ExtendedIDI(IDI):
 				date.minutes = 0
 				date.seconds = 0
 				utc0 = date.to_jd()
-				equ = hrz.to_equ(arrPos, utc)
 				
-				# format 'source' name based on local sidereal time
-				raHms = astro.deg_to_hms(equ.ra)
-				(tsecs, secs) = math.modf(raHms.seconds)
-				name = "ZA%02d%02d%02d%01d" % (raHms.hours, raHms.minutes, int(secs), 
-					int(tsecs * 10.0))
-				nameList.append(name)
+				obs.date = utc - astro.DJD_OFFSET
+				
+				if dataSet.source == 'z':
+					## Zenith pointings
+					equ = astro.equ_posn( obs.sidereal_time()*180/numpy.pi, obs.lat*180/numpy.pi )
+					
+					# format 'source' name based on local sidereal time
+					raHms = astro.deg_to_hms(equ.ra)
+					(tsecs, secs) = math.modf(raHms.seconds)
+					name = "ZA%02d%02d%02d%01d" % (raHms.hours, raHms.minutes, int(secs), int(tsecs * 10.0))
+				else:
+					## Real-live sources (ephem.Body instances)
+					name = dataSet.source.name
+					
+				sourceID = self._sourceTable.index(name) + 1
 				
 				# Compute the uvw coordinates of all baselines
 				if inverseMapper is not None:
@@ -1396,7 +1458,13 @@ class ExtendedIDI(IDI):
 					antennaStands.append( inputAnts[standID] )
 					
 				uvwBaselines = numpy.array([mergeBaseline(a1.stand.id, a2.stand.id, shift=16) for a1,a2 in uvUtils.getBaselines(antennaStands)])
-				uvwCoords = uvUtils.computeUVW(antennaStands, HA=0.0, dec=equ.dec, freq=self.refVal)
+				if dataSet.source == 'z':
+					uvwCoords = uvUtils.computeUVW(antennaStands, HA=0.0, dec=equ.dec, site=obs, freq=self.refVal)
+				else:
+					HA = obs.sidereal_time() - dataSet.source.ra
+					dec = dataSet.source.dec * 180/numpy.pi
+					
+					uvwCoords = uvUtils.computeUVW(antennaStands, HA=HA, dec=dec, site=obs, freq=self.refVal)
 				uvwCoords *= 1.0 / self.refVal
 				
 				tempMList = {}
@@ -1466,6 +1534,7 @@ class ExtendedIDI(IDI):
 					timeList.append(utc - utc0) 
 					intTimeList.append(dataSet.intTime)
 					sourceList.append(sourceID)
+					nameList.append(name)
 					
 			if dataSet.pol == self.stokes[-1]:
 				for bl in rawList:
@@ -1481,7 +1550,6 @@ class ExtendedIDI(IDI):
 							
 					mList.append(matrix.ravel())
 					
-				sourceID += 1
 				rawList = []
 		nBaseline = len(blineList)
 		nSource = len(nameList)
