@@ -19,6 +19,7 @@
   * Improved the speed of the 4-bit TBW, TBN, and DRX reads through look-up tables
   * Improved support for UVFITS files written by AIPS
   * Added multiple integration selection to the various readers in lsl.imaging.utils
+  * Added support for phase centers other than zenith in the FITS-IDI writer
 
 1.0.3
   * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
